syntax = "proto3";

package Raft;

service Raft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc InstallSnapshot(InstallSnapshotRequest)
      returns (InstallSnapshotResponse) {}
}

message AppendEntriesRequest {
  int32 term = 1;
  int32 leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  repeated Entry entries = 5;
  int32 leaderCommit = 6;
}

message Entry {
  int32 term = 1;
  bytes data = 2;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message InstallSnapshotRequest {
  int32 term = 1;
  int32 leaderId = 2;
  int32 lastIncludedIndex = 3;
  int32 lastIncludedTerm = 4;
  bytes data = 5;
}

message InstallSnapshotResponse { int32 term = 1; }
